<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/baseline_home_24"/>
        <item
            android:id="@+id/nav_qa"
            android:title="@string/nav_qa"
            android:icon="@drawable/baseline_chat_24"/>
        <item
            android:id="@+id/nav_maths"
            android:title="@string/nav_maths"
            android:icon="@drawable/baseline_add_24"/>
        <item
            android:id="@+id/nav_eng"
            android:title="@string/nav_eng"
            android:icon="@drawable/baseline_abc_24"/>
        <item
            android:id="@+id/nav_rus"
            android:title="@string/nav_rus"
            android:icon="@drawable/baseline_language_24"/>
        <item
            android:id="@+id/nav_uni"
            android:title="@string/nav_uni"
            android:icon="@drawable/baseline_account_balance_24"/>
    </group>

        <item
            android:title="@string/nav_profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/nav_profile"
                    android:icon="@drawable/baseline_account_circle_24"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/nav_logout"
                    android:icon="@drawable/baseline_logout_24"/>
                </group>
            </menu>
        </item>
</menu>