<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/uni_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.UniversitiesActivity"
    android:background="@color/diff_white">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view3"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="324dp"
            android:layout_height="64dp"
            android:background="@color/purple"
            android:fontFamily="@font/prosto_one"
            android:text="@string/uni_title"
            android:textAlignment="center"
            android:textColor="@color/diff_white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.122" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="341dp"
            android:layout_height="84dp"
            android:background="@null"
            android:contentDescription="@string/qa_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.103"
            app:srcCompat="@drawable/signup_bubble" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="308dp"
            android:layout_height="61dp"
            android:fontFamily="@font/days_one"
            android:text="@string/uni_kz"
            android:textColor="@color/blue"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:layout_constraintVertical_bias="0.465" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="341dp"
            android:layout_height="84dp"
            android:background="@null"
            android:contentDescription="@string/qa_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.323"
            app:srcCompat="@drawable/signup_bubble" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="308dp"
            android:layout_height="61dp"
            android:fontFamily="@font/days_one"
            android:text="@string/uni_inter"
            android:textColor="@color/blue"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.465" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="303dp"
            android:layout_height="38dp"
            android:layout_marginTop="664dp"
            android:fontFamily="@font/prosto_one"
            android:text="@string/uni_consult"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.726"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_menu_24"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>