<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.Login"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="394dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/days_one"
            android:text="@string/app_description"
            android:textColor="@color/diff_white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="323dp"
            android:layout_height="535dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/signup_bubble">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMail2"
                    android:layout_width="290dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="128dp"
                    android:background="@drawable/signup_inputbubble"
                    android:ems="10"
                    android:fontFamily="@font/prosto_one"
                    android:hint="@string/signup_mail"
                    android:textColorHint="@color/diff_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.272"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPsw2"
                    android:layout_width="290dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="204dp"
                    android:background="@drawable/signup_inputbubble"
                    android:ems="10"
                    android:fontFamily="@font/prosto_one"
                    android:hint="@string/signup_password"
                    android:textColorHint="@color/diff_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.272"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="152dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/days_one"
                    android:text="@string/app_login"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="259dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPsw2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/mainActivityButton"
            android:layout_width="84dp"
            android:layout_height="69dp"
            android:layout_marginTop="652dp"
            android:background="@drawable/baseline_arrow_forward_24"
            android:contentDescription="@string/app_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageButton>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="255dp"
            android:layout_height="72dp"
            android:layout_marginTop="660dp"
            android:fontFamily="@font/days_one"
            android:text="@string/signup_link"
            android:textColor="@color/diff_white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="106dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/signin_lockiconbg" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="80dp"
            android:layout_height="73dp"
            android:layout_marginTop="60dp"
            android:background="@color/red"
            android:contentDescription="@string/app_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_lock_open_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>