<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@drawable/bg">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="195dp"
            android:layout_height="135dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/open_book" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="158dp"
            android:layout_height="136dp"
            android:layout_marginTop="224dp"
            android:background="@drawable/signup_bubble"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calculator" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="158dp"
            android:layout_height="136dp"
            android:layout_marginTop="448dp"
            android:background="@drawable/signup_bubble"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/russian" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="158dp"
            android:layout_height="136dp"
            android:layout_marginTop="224dp"
            android:background="@drawable/signup_bubble"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/eng" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="158dp"
            android:layout_height="136dp"
            android:layout_marginTop="448dp"
            android:background="@drawable/signup_bubble"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/graduation" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="197dp"
            android:layout_height="43dp"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/days_one"
            android:text="@string/main_title"
            android:textColor="@color/blue"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/days_one"
            android:text="@string/main_maths"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/days_one"
            android:text="@string/main_eng"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/days_one"
            android:text="@string/main_rus"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="115dp"
            android:layout_height="63dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/days_one"
            android:text="@string/main_uni"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="413dp"
            android:layout_height="53dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/baseline_menu_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>